# TortaApp-V2

./: .agentigignore  .gitignore  ABOUT_PT.md  ARCHITECTURE.md  App.tsx  App.tsx.backup_before_dev_limit  CHANGELOG.md  DESIGN.md  PRE_RELEASE_CHECKLIST.md  PROJECT_STATUS.md  README.md  README_PT.md  RELEASE_GUIDE.md  RELEASE_PROTOCOL.md  SAFE_RELEASE_CHECKLIST.md  TODO.md  VERSIONING.md  i18n.ts  index.html  index.tsx  latest.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  VERSION_ROADMAP.md
BACKEND guilda/: jotasiete.lnk
Correções e expansões/: dicas.html  index.html
Nova pasta/: Pulover's Macro Creator.lnk  ReMouse Standard.lnk
SITE GUILDA prices/: anuncios.html  paginasamarelas.html
SUPER PY/: superpy_app.spec
_archive/: RELEASE_PROTOCOL.md  RESTORE_KEYS.md
components/: AdCooldownWidget.tsx  AdminAnomalyDetective.tsx  AdminPanel.tsx  AdminSettings.tsx  AdminUserManager.tsx  AdvancedTools.tsx  AlertsManager.tsx  ChartsView.tsx  Dashboard.old.tsx  Dashboard.tsx  DocumentationPage.tsx  EmojiPicker.tsx  FeedbackManager.tsx  FeedbackWidget.tsx  LiveFeed.tsx  LiveTradeSetup.tsx  LiveTradeTicker.tsx  PlayerProfile.tsx  PlayerProfile.tsx.backup_heatmap  UserSettings.tsx
constants/: gamification.ts
src-tauri/: 2  Cargo.toml  app.key  app.key.pub  minisign.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  parser.rs  parser_temp.rs  price.rs  watcher.rs  watcher_backup.rs
(+186 files in other folders)
